; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CcGetAccountStatus.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CcGetAccountStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ERR_INTERNAL_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"GetAccountStatus\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CcGetAccountStatus(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %8, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = icmp eq %struct.TYPE_3__* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %11, %2
  %15 = load i32, i32* @ERR_INTERNAL_ERROR, align 4
  store i32 %15, i32* %3, align 4
  br label %40

16:                                               ; preds = %11
  %17 = call i32* (...) @NewPack()
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @OutRpcClientGetConnectionStatus(i32* %18, i32* %19)
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = call i32* @RpcCall(i32 %23, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32* %24)
  store i32* %25, i32** %6, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = call i64 @RpcIsOk(i32* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %16
  %30 = load i32*, i32** %5, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @InRpcClientGetConnectionStatus(i32* %30, i32* %31)
  br label %36

33:                                               ; preds = %16
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @RpcGetError(i32* %34)
  store i32 %35, i32* %8, align 4
  br label %36

36:                                               ; preds = %33, %29
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @FreePack(i32* %37)
  %39 = load i32, i32* %8, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %36, %14
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32* @NewPack(...) #1

declare dso_local i32 @OutRpcClientGetConnectionStatus(i32*, i32*) #1

declare dso_local i32* @RpcCall(i32, i8*, i32*) #1

declare dso_local i64 @RpcIsOk(i32*) #1

declare dso_local i32 @InRpcClientGetConnectionStatus(i32*, i32*) #1

declare dso_local i32 @RpcGetError(i32*) #1

declare dso_local i32 @FreePack(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
